--- a/Code/Combined_Portfolio.ipynb
+++ b/Code/Combined_Portfolio.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 167,
    "id": "9c8c6b7f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 168,
    "id": "6cd1b968",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 169,
    "id": "989e6433",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 170,
    "id": "fc9617be",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 171,
    "id": "ad307381",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "[338 rows x 7 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 172,
    "id": "9b8f7b93",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "[335 rows x 7 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 173,
    "id": "9347da42",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
        "[335 rows x 7 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 174,
    "id": "511f26c6",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
        "[442 rows x 6 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 175,
    "id": "35114fa3",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "Freq: ME, Name: RF, Length: 1192, dtype: float64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 176,
    "id": "f5bbb6f7",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "Freq: ME, Name: MSCI World, Length: 468, dtype: float64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 177,
    "id": "6c9d4318",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1324,7 @@
        "[549 rows x 7 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 178,
    "id": "90f91ffc",
    "metadata": {},
    "outputs": [],
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 179,
    "id": "bb64c9c0",
    "metadata": {},
    "outputs": [],
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 180,
    "id": "1ad38ca6",
    "metadata": {},
    "outputs": [],
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 181,
    "id": "b1fc163f",
    "metadata": {},
    "outputs": [],
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 182,
    "id": "333eba2a",
    "metadata": {},
    "outputs": [],
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 183,
    "id": "0c4abcfd",
    "metadata": {},
    "outputs": [
@@ -1768,13 +1768,13 @@
        "[299 rows x 13 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_results = combine_strategy_results(\n",
+    "fundamental_trend = combine_strategy_results(\n",
     "    dfs=[\n",
     "        fundamental_equity_results,\n",
     "        trend_equity_results,\n",
@@ -1785,38 +1785,12 @@
     "    weights=[0.50, 0.125, 0.125, 0.125, 0.125]\n",
     ")\n",
     "\n",
-    "final_results"
+    "fundamental_trend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "9cc595bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fundamental 2025-10-31 00:00:00\n",
-      "trend equity 2025-09-30 00:00:00\n",
-      "trend bond 2025-10-31 00:00:00\n",
-      "trend fx 2025-09-30 00:00:00\n",
-      "trend rates 2025-10-31 00:00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "for name, df in zip(\n",
-    "    [\"fundamental\",\"trend equity\",\"trend bond\",\"trend fx\",\"trend rates\"],\n",
-    "    dfs\n",
-    "):\n",
-    "    print(name, df.index.max())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 184,
    "id": "adc5b445",
    "metadata": {},
    "outputs": [
@@ -1980,14 +1954,227 @@
        "AC 3                        0.0986   -0.0506"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_results.dropna(inplace=True)\n",
-    "pmp.run_perf_summary_benchmark_vs_strategy(final_results, alreadyXs=True)"
+    "fundamental_trend.dropna(inplace=True)\n",
+    "pmp.run_perf_summary_benchmark_vs_strategy(fundamental_trend, alreadyXs=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa2dbc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Strategy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Arithm Avg Total Return</th>\n",
+       "      <td>3.9061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arithm Avg Xs Return</th>\n",
+       "      <td>2.1972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Std Xs Returns</th>\n",
+       "      <td>5.3087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sharpe Arithmetic</th>\n",
+       "      <td>0.4139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geom Avg Total Return</th>\n",
+       "      <td>3.8317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geom Avg Xs Return</th>\n",
+       "      <td>2.1108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sharpe Geometric</th>\n",
+       "      <td>0.3976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Min Xs Return</th>\n",
+       "      <td>-3.4203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Max Xs Return</th>\n",
+       "      <td>6.2809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Skewness</th>\n",
+       "      <td>0.4178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Excess Kurtosis</th>\n",
+       "      <td>0.7932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpha Arithmetic</th>\n",
+       "      <td>2.4866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpha Arithmetic p-val</th>\n",
+       "      <td>0.0324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpha Geometric</th>\n",
+       "      <td>2.4059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 1</th>\n",
+       "      <td>0.0204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 1 p-val</th>\n",
+       "      <td>0.6945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 2</th>\n",
+       "      <td>0.0218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 2 p-val</th>\n",
+       "      <td>0.6922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 3</th>\n",
+       "      <td>0.0011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 3 p-val</th>\n",
+       "      <td>0.9847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 4</th>\n",
+       "      <td>-0.0412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 4 p-val</th>\n",
+       "      <td>0.3460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 5</th>\n",
+       "      <td>0.0624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 5 p-val</th>\n",
+       "      <td>0.3621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 6</th>\n",
+       "      <td>0.0010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 6 p-val</th>\n",
+       "      <td>0.9545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 7</th>\n",
+       "      <td>-0.0425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 7 p-val</th>\n",
+       "      <td>0.5314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tracking Error</th>\n",
+       "      <td>5.3424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Information Ratio</th>\n",
+       "      <td>0.4503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC 1</th>\n",
+       "      <td>-0.0825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC 2</th>\n",
+       "      <td>-0.0011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC 3</th>\n",
+       "      <td>-0.0506</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Strategy\n",
+       "Arithm Avg Total Return    3.9061\n",
+       "Arithm Avg Xs Return       2.1972\n",
+       "Std Xs Returns             5.3087\n",
+       "Sharpe Arithmetic          0.4139\n",
+       "Geom Avg Total Return      3.8317\n",
+       "Geom Avg Xs Return         2.1108\n",
+       "Sharpe Geometric           0.3976\n",
+       "Min Xs Return             -3.4203\n",
+       "Max Xs Return              6.2809\n",
+       "Skewness                   0.4178\n",
+       "Excess Kurtosis            0.7932\n",
+       "Alpha Arithmetic           2.4866\n",
+       "Alpha Arithmetic p-val     0.0324\n",
+       "Alpha Geometric            2.4059\n",
+       "Beta 1                     0.0204\n",
+       "Beta 1 p-val               0.6945\n",
+       "Beta 2                     0.0218\n",
+       "Beta 2 p-val               0.6922\n",
+       "Beta 3                     0.0011\n",
+       "Beta 3 p-val               0.9847\n",
+       "Beta 4                    -0.0412\n",
+       "Beta 4 p-val               0.3460\n",
+       "Beta 5                     0.0624\n",
+       "Beta 5 p-val               0.3621\n",
+       "Beta 6                     0.0010\n",
+       "Beta 6 p-val               0.9545\n",
+       "Beta 7                    -0.0425\n",
+       "Beta 7 p-val               0.5314\n",
+       "Tracking Error             5.3424\n",
+       "Information Ratio          0.4503\n",
+       "AC 1                      -0.0825\n",
+       "AC 2                      -0.0011\n",
+       "AC 3                      -0.0506"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pmp.run_factor_regression(fundamental_trend, famafrench_data, alreadyXs=True)"
    ]
   }
  ],
