Adding Ryan's Code

--- a/Code_Ryan/Monetary Policy Portfolios/MP_Interest Rates.ipynb
+++ b/Code_Ryan/Monetary Policy Portfolios/MP_Interest Rates.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c2d0ede7",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b2a80d24",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0505beaa",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fe63773e",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e43b3b1f",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e6f5d2c3",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6b2492d0",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "383e05f9",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8c48c158",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d7354e2c",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "626118f5",
    "metadata": {},
    "outputs": [
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e9dd053e",
    "metadata": {},
    "outputs": [
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6948df85",
    "metadata": {},
    "outputs": [
@@ -2211,7 +2211,7 @@
     "# We use the raw strategy's realized vol to estimate future volatility.\n",
     "expected_vol = strategy_raw_ret.rolling(window = 36).std() * np.sqrt(12)\n",
     "\n",
-    "# We use previous rolling volatility (shift 1) to size today's position\n",
+    "# We use previous rolling volatility (shift 1) of the last three months to size this month's position\n",
     "lev_factor = target_vol / expected_vol.shift(1)\n",
     "\n",
     "## **⭐ CRITICAL CHANGE: Scaling the Weights**\n",
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a65ed3c8",
    "metadata": {},
    "outputs": [],
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f30f1615",
    "metadata": {},
    "outputs": [
@@ -2559,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "57b2cb25",
    "metadata": {},
    "outputs": [
