--- a/Code/BC_data_preparation.ipynb
+++ b/Code/BC_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "e96b9416",
    "metadata": {},
    "outputs": [
@@ -178,12 +178,15 @@
     "GDPforecast = monthly\n",
     "\n",
     "print(GDPforecast.head(10))\n",
+    "\n",
+    "out_path = r\"C:/Users/Sedláček/Documents/UZH/PMP/Macro_momentum/PMP_December_8/Data/GDP_forecasts.csv\"\n",
+    "GDPforecast.to_csv(out_path, index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "d18f5c2b",
    "metadata": {},
    "outputs": [
@@ -195,17 +198,17 @@
       "['YEAR', 'QUARTER', 'US Forecast', 'observation_date', 'UK', 'CH', 'JP', 'AU', 'EU']\n",
       "Done. Rearranged table saved to: INF_forecast_rearranged.xlsx\n",
       "          Date        GB        CH        JP     AU        EU      US\n",
-      "0   1970-01-01  0.049574  0.023134  0.077513    NaN       NaN     NaN\n",
-      "1   1970-02-01  0.049307  0.021236  0.077513    NaN       NaN     NaN\n",
-      "2   1970-03-01  0.051420  0.024992  0.077171    NaN       NaN     NaN\n",
-      "3   1970-04-01  0.056188  0.025928  0.076836    NaN       NaN     NaN\n",
-      "4   1970-05-01  0.060836  0.031368  0.072456    NaN       NaN     NaN\n",
+      "0   2025-10-01  0.038000  0.000100  0.030000  0.038  0.020789  0.0288\n",
+      "1   2025-09-01  0.041000  0.002000  0.029000  0.032  0.022124  0.0279\n",
+      "2   2025-08-01  0.041000  0.002000  0.027000  0.032  0.020289  0.0279\n",
+      "3   2025-07-01  0.042000  0.002000  0.031000  0.032  0.020079  0.0279\n",
+      "4   2025-06-01  0.041000  0.001000  0.033000  0.021  0.019676  0.0317\n",
       "..         ...       ...       ...       ...    ...       ...     ...\n",
-      "665 2025-06-01  0.041000  0.001000  0.033000  0.021  0.019676  0.0317\n",
-      "666 2025-07-01  0.042000  0.002000  0.031000  0.032  0.020079  0.0279\n",
-      "667 2025-08-01  0.041000  0.002000  0.027000  0.032  0.020289  0.0279\n",
-      "668 2025-09-01  0.041000  0.002000  0.029000  0.032  0.022124  0.0279\n",
-      "669 2025-10-01  0.038000  0.000100  0.030000  0.038  0.020789  0.0288\n",
+      "665 1970-05-01  0.060836  0.031368  0.072456    NaN       NaN     NaN\n",
+      "666 1970-04-01  0.056188  0.025928  0.076836    NaN       NaN     NaN\n",
+      "667 1970-03-01  0.051420  0.024992  0.077171    NaN       NaN     NaN\n",
+      "668 1970-02-01  0.049307  0.021236  0.077513    NaN       NaN     NaN\n",
+      "669 1970-01-01  0.049574  0.023134  0.077513    NaN       NaN     NaN\n",
       "\n",
       "[670 rows x 7 columns]\n"
      ]
@@ -333,13 +336,18 @@
     "INFforecast = monthly\n",
     "INFforecast.rename(columns={'UK': 'GB'}, inplace=True)\n",
     "\n",
+    "INFforecast = INFforecast.sort_values(\"Date\", ascending=False).reset_index(drop=True)\n",
+    "\n",
     "print(\"Done. Rearranged table saved to:\", file_out)\n",
-    "print(INFforecast)\n"
+    "print(INFforecast)\n",
+    "\n",
+    "out_path = r\"C:/Users/Sedláček/Documents/UZH/PMP/Macro_momentum/PMP_December_8/Data/Inflation_forecasts.csv\"\n",
+    "INFforecast.to_csv(out_path, index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "22d51c6f",
    "metadata": {},
    "outputs": [
@@ -362,17 +370,17 @@
       "\n",
       "[664 rows x 7 columns]\n",
       "          Date        GB        CH        JP     AU        EU      US\n",
-      "0   1970-01-01  0.049574  0.023134  0.077513    NaN       NaN     NaN\n",
-      "1   1970-02-01  0.049307  0.021236  0.077513    NaN       NaN     NaN\n",
-      "2   1970-03-01  0.051420  0.024992  0.077171    NaN       NaN     NaN\n",
-      "3   1970-04-01  0.056188  0.025928  0.076836    NaN       NaN     NaN\n",
-      "4   1970-05-01  0.060836  0.031368  0.072456    NaN       NaN     NaN\n",
+      "0   2025-10-01  0.038000  0.000100  0.030000  0.038  0.020789  0.0288\n",
+      "1   2025-09-01  0.041000  0.002000  0.029000  0.032  0.022124  0.0279\n",
+      "2   2025-08-01  0.041000  0.002000  0.027000  0.032  0.020289  0.0279\n",
+      "3   2025-07-01  0.042000  0.002000  0.031000  0.032  0.020079  0.0279\n",
+      "4   2025-06-01  0.041000  0.001000  0.033000  0.021  0.019676  0.0317\n",
       "..         ...       ...       ...       ...    ...       ...     ...\n",
-      "665 2025-06-01  0.041000  0.001000  0.033000  0.021  0.019676  0.0317\n",
-      "666 2025-07-01  0.042000  0.002000  0.031000  0.032  0.020079  0.0279\n",
-      "667 2025-08-01  0.041000  0.002000  0.027000  0.032  0.020289  0.0279\n",
-      "668 2025-09-01  0.041000  0.002000  0.029000  0.032  0.022124  0.0279\n",
-      "669 2025-10-01  0.038000  0.000100  0.030000  0.038  0.020789  0.0288\n",
+      "665 1970-05-01  0.060836  0.031368  0.072456    NaN       NaN     NaN\n",
+      "666 1970-04-01  0.056188  0.025928  0.076836    NaN       NaN     NaN\n",
+      "667 1970-03-01  0.051420  0.024992  0.077171    NaN       NaN     NaN\n",
+      "668 1970-02-01  0.049307  0.021236  0.077513    NaN       NaN     NaN\n",
+      "669 1970-01-01  0.049574  0.023134  0.077513    NaN       NaN     NaN\n",
       "\n",
       "[670 rows x 7 columns]\n"
      ]
@@ -385,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "bd7f87f6",
    "metadata": {},
    "outputs": [
