--- a/Code/GDP_data_preparation.ipynb
+++ b/Code/GDP_data_preparation.ipynb
@@ -2,83 +2,144 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b6ae08ff",
+   "execution_count": 9,
+   "id": "135e997b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building AR(1) forecast series for CH...\n",
+      "Building AR(1) forecast series for JP...\n",
+      "Building AR(1) forecast series for EU...\n",
+      "Done.\n",
+      "AR-based GDP forecasts for CH, JP, and EU saved to:\n",
+      "../Data/GDP_forecasts.csv\n",
+      "          Date     AU     GB        CH        JP        EU        US    EM\n",
+      "659 2025-06-01  0.021  0.025  0.023906  0.018488  0.015211  0.013454  0.05\n",
+      "660 2025-07-01  0.032  0.025  0.023908  0.018493  0.015211  0.014502  0.05\n",
+      "661 2025-08-01  0.032  0.025  0.013519  0.010418  0.013702  0.014502  0.05\n",
+      "662 2025-09-01  0.032  0.025  0.013517  0.010419  0.013702  0.014502  0.05\n",
+      "663 2025-10-01  0.038  0.025  0.013515  0.010420  0.013701  0.015632  0.05\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from statsmodels.tsa.ar_model import AutoReg\n",
     "\n",
     "# ---------------------------------------------------------\n",
-    "# 1. Load data\n",
+    "# 1. Load the original GDP file\n",
     "# ---------------------------------------------------------\n",
-    "# Adjust the path to where your file is stored\n",
-    "file_path = r\"../Data/GDP_forecast.csv\"\n",
+    "input_path = r\"../Data/GDP_forecasts.csv\"        # <-- change this\n",
+    "output_path = r\"../Data/GDP_forecasts.csv\"   # <-- and this if you want\n",
     "\n",
-    "df = pd.read_csv(file_path)\n",
+    "df = pd.read_csv(input_path)\n",
     "\n",
     "# Parse Date column and sort chronologically\n",
-    "df['Date'] = pd.to_datetime(df['Date'], dayfirst=False)  # \"10/1/2025\" -> 2025-10-01\n",
+    "df['Date'] = pd.to_datetime(df['Date'], dayfirst=False)\n",
     "df = df.sort_values('Date').reset_index(drop=True)\n",
     "\n",
     "# ---------------------------------------------------------\n",
-    "# 2. Helper: rolling AR forecast function\n",
+    "# 2. Rolling AR(1) on non-missing block\n",
     "# ---------------------------------------------------------\n",
-    "def rolling_ar_forecast(series, lags=1, min_obs=36):\n",
+    "def rolling_ar_forecast_nonmissing(series, lags=1, min_obs=36):\n",
     "    \"\"\"\n",
-    "    series : pd.Series of realized GDP values\n",
-    "    lags   : AR order (AR(1) by default)\n",
-    "    min_obs : minimum number of observations before\n",
-    "              we start estimating AR models\n",
+    "    Build a rolling AR(lags) forecast only on the part of the series\n",
+    "    where data is available (non-NaN).\n",
     "\n",
-    "    Returns a pd.Series with the same index:\n",
-    "    - for t < min_obs: use the original realized values\n",
-    "    - for t >= min_obs: use 1-step-ahead AR forecasts\n",
+    "    - For dates with real data:\n",
+    "        * first min_obs → keep realized values\n",
+    "        * later → AR(1) 1-step-ahead forecasts\n",
+    "    - For dates that were NaN originally → stay NaN\n",
     "    \"\"\"\n",
-    "    series = series.astype(float)\n",
-    "    n = len(series)\n",
-    "    forecasts = pd.Series(index=series.index, dtype=float)\n",
     "\n",
-    "    for t in range(min_obs, n):\n",
-    "        # Use data up to t-1 for estimation\n",
-    "        train = series.iloc[:t]\n",
-    "        # Fit AR model on rolling window (min_obs..t-1)\n",
-    "        model = AutoReg(train, lags=lags, old_names=False).fit()\n",
-    "        # Forecast value at position t\n",
-    "        # start=end=len(train) gives 1-step-ahead forecast\n",
-    "        fcast = model.predict(start=len(train), end=len(train))[0]\n",
-    "        forecasts.iloc[t] = fcast\n",
+    "    # Ensure numeric, turn weird stuff into NaN\n",
+    "    s = pd.to_numeric(series, errors='coerce')\n",
     "\n",
-    "    # For the initial part where we can't estimate AR reliably,\n",
-    "    # just keep the realized values (or you can leave as NaN)\n",
-    "    forecasts.iloc[:min_obs] = series.iloc[:min_obs]\n",
+    "    # Work only with the non-missing observations\n",
+    "    valid = s.dropna()\n",
     "\n",
-    "    return forecasts\n",
+    "    n_valid = len(valid)\n",
+    "    if n_valid == 0:\n",
+    "        # nothing to do, just return original\n",
+    "        return series.copy()\n",
+    "\n",
+    "    # Ensure we have at least something to estimate\n",
+    "    min_obs = max(min_obs, lags + 1)\n",
+    "    if n_valid <= min_obs + lags:\n",
+    "        # Too little data for rolling forecasts -> return cleaned series\n",
+    "        out = pd.Series(index=s.index, dtype=float)\n",
+    "        out.loc[valid.index] = valid\n",
+    "        return out\n",
+    "\n",
+    "    # Output series: same index as original, all NaN initially\n",
+    "    forecast = pd.Series(index=s.index, dtype=float)\n",
+    "\n",
+    "    valid_idx = valid.index          # positions (indices) where we have data\n",
+    "    valid_vals = valid.values        # numpy array of the actual values\n",
+    "\n",
+    "    # Rolling AR using numpy arrays\n",
+    "    for t in range(min_obs, n_valid):\n",
+    "        train_vals = valid_vals[:t]\n",
+    "\n",
+    "        # Fit AR model on train_vals (plain numpy array)\n",
+    "        model = AutoReg(train_vals, lags=lags, old_names=False).fit()\n",
+    "\n",
+    "        # 1-step-ahead forecast (next value after train)\n",
+    "        pred = model.predict(start=len(train_vals), end=len(train_vals))\n",
+    "        # IMPORTANT FIX: take first element by position, not by label\n",
+    "        fcast = float(np.asarray(pred)[0])\n",
+    "\n",
+    "        # Put forecast at the corresponding original index\n",
+    "        forecast.loc[valid_idx[t]] = fcast\n",
+    "\n",
+    "    # For the first min_obs valid points, keep realized values\n",
+    "    forecast.loc[valid_idx[:min_obs]] = valid.iloc[:min_obs]\n",
+    "\n",
+    "    # Dates with no realized GDP stay NaN\n",
+    "    return forecast\n",
     "\n",
     "# ---------------------------------------------------------\n",
-    "# 3. Apply AR forecasting to CH, JP, EU\n",
+    "# 3. Apply AR(1) forecasting to CH, JP, EU\n",
     "# ---------------------------------------------------------\n",
     "countries_to_forecast = ['CH', 'JP', 'EU']\n",
     "\n",
     "for c in countries_to_forecast:\n",
-    "    df[c] = rolling_ar_forecast(df[c], lags=1, min_obs=36)\n",
+    "    print(f\"Building AR(1) forecast series for {c}...\")\n",
+    "    df[c] = rolling_ar_forecast_nonmissing(df[c], lags=1, min_obs=36)\n",
     "\n",
     "# ---------------------------------------------------------\n",
-    "# 4. Save result: same structure as original file\n",
+    "# 4. Save result\n",
     "# ---------------------------------------------------------\n",
-    "output_path = r\"C:\\path\\to\\your\\GDP_forecast_AR.csv\"\n",
     "df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(\"Done. AR-based forecasts for CH, JP, and EU saved to:\")\n",
+    "print(\"Done.\")\n",
+    "print(\"AR-based GDP forecasts for CH, JP, and EU saved to:\")\n",
     "print(output_path)\n",
-    "print(df.head())\n"
+    "print(df.tail())\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
